Optimize product processing using parallel streams
Product processing has been updated to use parallel streams to optimize performance. Processing now takes place within a custom thread pool, improving overall system responsiveness. Exception handling has also been modified to provide a more accurate response during parallel processing errors.